test/expressions/bitshift/checks/bitshiftLargerThanNumBitsParam.2.good
bitshiftLargerThanNumBitsParam.chpl:10: error: Cannot bitshift 128 by 64 because 64 is >= the bitwidth of uint(64)
